Changes made by Tom Mesich (tmesich@riw2000.com).
HomeAgain

--- a/ScreenBuilderTest Hybrid/index.html
+++ b/ScreenBuilderTest Hybrid/index.html
@@ -46,7 +46,7 @@
             </div>
         </header>
         <ul id="navigation-container" data-role="listview">
-            <li><a href="home/view.html" data-icon="home">Home</a>
+            <li><a href="home/view.html" data-icon="home">HomeAgain</a>
             </li>
         </ul>
     </div>
